--- a/index.html
+++ b/index.html
@@ -569,49 +569,60 @@ importScripts('${cdnBase}vs/base/worker/workerMain.js');`;
   </script>
 <!-- --- DOAÇÃO FIXA (cole antes do </body>) --- -->
 <style>
+.donation-cta {
+  position: fixed;
+  right: 18px;
+  bottom: 18px;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;        /* muda para coluna: imagem em cima, texto embaixo */
+  align-items: center;           /* centraliza o texto sob a imagem */
+  gap: .4rem;                     /* espaço entre imagem e texto */
+  background: rgba(0,0,0,0.6);
+  padding: 10px 12px;            /* aumentar um pouco */
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+  backdrop-filter: blur(4px);
+  transition: transform .12s ease, opacity .12s ease;
+}
+.donation-cta:hover {
+  transform: translateY(-4px);
+  opacity: 0.98;
+}
+.donation-cta img {
+  width: 120px;   /* aumenta o tamanho da imagem para 120px de largura */
+  height: auto;
+  display: block;
+  border-radius: 8px;
+  border: 2px solid rgba(255,255,255,0.06);
+}
+.donation-cta .donation-text {
+  color: #ffd24d;
+  font-weight: 700;
+  font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+  font-size: 0.95rem;
+  text-align: center;              /* centraliza o texto */
+  white-space: nowrap;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.6);
+}
+@media (max-width: 520px) {
   .donation-cta {
-    position: fixed;
-    right: 18px;
-    bottom: 18px;
-    z-index: 9999;
-    display: flex;
-    align-items: center;
-    gap: .6rem;
-    background: rgba(0,0,0,0.6);
+    right: 10px;
+    bottom: 10px;
     padding: 8px 10px;
-    border-radius: 12px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.25);
-    backdrop-filter: blur(4px);
-    transition: transform .12s ease, opacity .12s ease;
   }
-  .donation-cta:hover { transform: translateY(-4px); opacity: 0.98; }
   .donation-cta img {
-    width: 84px;      /* tamanho do QR - ajuste se quiser */
-    height: auto;
-    display: block;
-    border-radius: 8px;
-    border: 2px solid rgba(255,255,255,0.06);
+    width: 90px;  /* tamanho menor em mobile */
   }
   .donation-cta .donation-text {
-    color: #ffd24d;    /* tom amarelo para destaque */
-    font-weight: 700;
-    font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    font-size: 0.95rem;
-    white-space: nowrap;
-    text-shadow: 0 1px 0 rgba(0,0,0,0.6);
+    font-size: 0.85rem;
   }
-
-  /* versão mobile: reduz tamanho e desloca um pouco */
-  @media (max-width: 520px){
-    .donation-cta { right: 10px; bottom: 10px; padding: 6px; }
-    .donation-cta img { width: 72px; }
-    .donation-cta .donation-text { font-size: 0.85rem; }
-  }
+}
 </style>
 
 <a class="donation-cta" href="lnurl1dp68gurn8ghj7ampd3kx2ar0veekzar0wd5xjtnrdakj7tnhv4kxctttdehhwm30d3h82unvwqhkgat5d9n82mryw4ehgvpj50v5cx" target="_blank" rel="noopener noreferrer" title="Apoie o site com Satoshis">
   <img src="assets/wos.jpg" alt="QR Doação — Wallet of Satoshi">
-  <span class="donation-text">Ajude o site — doar</span>
+  <span class="donation-text">Apoie o site com Satoshis</span>
 </a>
 <!-- --- FIM DOAÇÃO --- -->
 </body>
